Added JDK21/hive-jdbc-4-0-1/hadoop-3-4