@@ -1,13 +1,13 @@
 /**
  * Copyright (C) 2013-2021 Klarna AB
- * Copyright (C) 2021 The HiveRunner Contributors
- *
+ * Copyright (C) ${license.git.copyrightYears} The HiveRunner Contributors
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -67,12 +67,12 @@ public class HiveShellBuilder {
     }
 
     public List<Script> fromScriptPaths(List<Path> scriptPaths, Charset charset) {
-        List<Script> scripts = new ArrayList();
+        List<Script> scripts = new ArrayList<>();
         int index = 0;
         for (Path path : scriptPaths) {
             Preconditions.checkState(Files.exists(path), "File %s does not exist", path);
             try {
-                String sqlText = new String(Files.readAllBytes(path), charset);
+                String sqlText = Files.readString(path, charset);
                 scripts.add(new HiveRunnerScript(index++, path, sqlText));
             } catch (IOException e) {
                 throw new IllegalArgumentException("Failed to load script file '" + path + "'");
@@ -80,17 +80,16 @@ public class HiveShellBuilder {
         }
         return scripts;
     }
-    
+
     public void setCommandShellEmulation(CommandShellEmulator commandShellEmulator) {
-      this.commandShellEmulator = commandShellEmulator;
+        this.commandShellEmulator = commandShellEmulator;
     }
 
     public HiveShellContainer buildShell() {
         return new HiveShellTearable(hiveServerContainer, props, setupScripts, resources, scriptsUnderTest, commandShellEmulator);
     }
-    
-    public void overrideScriptsUnderTest(List<? extends Script> scripts) {
-      scriptsUnderTest = new ArrayList<>(scripts);
-  }
-}
 
+    public void overrideScriptsUnderTest(List<? extends Script> scripts) {
+        scriptsUnderTest = new ArrayList<>(scripts);
+    }
+}
